# Multispectral-UAV-Crop-Classification-Pipeline

./: .gitignore  Create_Patches.py  LICENSE  README.md  X.py  check_bands.py  create_training_data.py  crop_classification_Deep_Learning.ipynb  geopatch_shared_label.py  label_encoding.py  main.py  patches.py  patches2.py  pyproject.toml  rename_with_class.py  requirements.txt  rio_x_array.py  setup.py  shuffle.py  split.py  stacken.py  test.csv  testscript.py  train.csv  val.csv  vis.py
configs/: config.json
data/processed/splits/: split_mapping.csv
data/raw/orthoimages/: 230628_reflectance_ortho.tif.aux.xml
data/raw/zone_masks/: zone_grid.dbf  zone_grid.qmd  zone_grid.shp  zone_grid.shx
data/shapefiles/: fieldshape.geojson  fieldshape.qmd  final_shape.geojson  md_FieldSHP.dbf  md_FieldSHP.qmd  md_FieldSHP.shx  md_FieldSHP_readme.txt
notebooks/: DL_crop_class.ipynb  classic_machine_learning_training.ipynb
output/models/: inference_example.py  model_metadata.json
results/tensorboard_logs/fold_model_lr0.0001_bs16_optadam_ep50_20250713_131603/: events.out.tfevents.1752405363.DESKTOP-GFL4R6C.13152.3
src/libs/: __init__.py  patch_extractor.py  spatial_splitter.py  temporal_stacker.py
stacked_patches_npy2/: stack_mapping.csv
tensorboard_logs/final_model_lr0.0001_bs16_optadam_ep50_20250713_124922/: events.out.tfevents.1752403762.DESKTOP-GFL4R6C.13152.2
